tdf#94831: Check for null mpReadAccess before first use

There was erroneously added code before check in
45e8e0fbee40f9a8d91f4c559c8bbb16dd7b3f36.

Change-Id: Ie2e84cfc061097c25e5d799e9c388abd9724bd93
(cherry picked from commit d5dcfe40ff3774d82a7b8f9f3d75b5b3cdac78ba)