vcl/source/filter/jpeg/JpegWriter.cxx
@@ -199,32 +199,29 @@ bool JPEGWriter::Write( const Graphic& rGraphic )
     }
 
     mpReadAccess = aGraphicBmp.AcquireReadAccess();
-
-    if ( !mbGreys )  // bitmap was not explicitly converted into greyscale,
-    {                // check if source is greyscale only
-
-        bool bIsGrey = true;
-
-        long nWidth = mpReadAccess->Width();
-        for ( long nY = 0; bIsGrey && ( nY < mpReadAccess->Height() ); nY++ )
-        {
-            BitmapColor aColor;
-            for( long nX = 0L; bIsGrey && ( nX < nWidth ); nX++ )
-            {
-                aColor = mpReadAccess->HasPalette() ? mpReadAccess->GetPaletteColor( mpReadAccess->GetPixelIndex( nY, nX ) )
-                                            : mpReadAccess->GetPixel( nY, nX );
-                bIsGrey = ( aColor.GetRed() == aColor.GetGreen() ) && ( aColor.GetRed() == aColor.GetBlue() );
-            }
-        }
-        if ( bIsGrey )
-            mbGreys = true;
-    }
-
-    if( mpExpWasGrey )
-        *mpExpWasGrey = mbGreys;
-
     if( mpReadAccess )
     {
+        if ( !mbGreys )  // bitmap was not explicitly converted into greyscale,
+        {                // check if source is greyscale only
+            bool bIsGrey = true;
+
+            long nWidth = mpReadAccess->Width();
+            for ( long nY = 0; bIsGrey && ( nY < mpReadAccess->Height() ); nY++ )
+            {
+                BitmapColor aColor;
+                for( long nX = 0L; bIsGrey && ( nX < nWidth ); nX++ )
+                {
+                    aColor = mpReadAccess->HasPalette() ? mpReadAccess->GetPaletteColor( mpReadAccess->GetPixelIndex( nY, nX ) )
+                                                : mpReadAccess->GetPixel( nY, nX );
+                    bIsGrey = ( aColor.GetRed() == aColor.GetGreen() ) && ( aColor.GetRed() == aColor.GetBlue() );
+                }
+            }
+            if ( bIsGrey )
+                mbGreys = true;
+        }
+        if( mpExpWasGrey )
+            *mpExpWasGrey = mbGreys;
+
         mbNative = ( mpReadAccess->GetScanlineFormat() == BMP_FORMAT_24BIT_TC_RGB );
 
         if( !mbNative )
